<resources>

    <string name="app_name">words</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">RoteMemo</string>
    <string name="title_activity_filelist">Filelist</string>
    <string name="Reset">Reset</string>
    <string name="Browse">Browse</string>
    <string name="Exit">Exit</string>
    <string name="From">From :</string>
    <string name="To">to :</string>
    <string name="Range">Set Range</string>
    <string name="Show">Show</string>
    <string name="Right">Right</string>
    <string name="Wrong">Wrong</string>
    <string name="Up">Up</string>
    <string name="Select">Select</string>
    <string name="Cancel">Cancel</string>
    <string name="defaultRegex">(*._([^_]+))+|([^\\t]+)(\\t([^\\t]+))</string>
    <string name="regexLabel">regex to parse file</string>
    <string name="resetTimer">Reset timer</string>
    <string name="clear">Clear</string>
    <string name="skip">Skip</string>

</resources>